src/passes/snapshots/lumina2__passes__cst_gen__test__util__punctuated_empty.snap
---
source: src/passes/cst_gen.rs
expression: ""
---
PunctuatedList {
    items: [],
    punctuation: [],
}
