src/passes/snapshots/lumina2__passes__cst_gen__test__util__punctuated_multiple.snap
---
source: src/passes/cst_gen.rs
expression: "123,321,456"
---
PunctuatedList {
    items: [
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    123,
                ),
            ),
        ),
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    321,
                ),
            ),
        ),
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    456,
                ),
            ),
        ),
    ],
    punctuation: [
        Comma,
        Comma,
    ],
}
