src/passes/snapshots/lumina2__passes__cst_gen__test__util__punctuated_single.snap
---
source: src/passes/cst_gen.rs
expression: "123"
---
PunctuatedList {
    items: [
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    123,
                ),
            ),
        ),
    ],
    punctuation: [],
}
